# controller_plugin_differential_flatness

./: CMakeLists.txt  package.xml  plugins.xml
config/: available_modes.yaml  default_controller.yaml  f330_pd_controller.yaml  pd_controller.yaml
include/: DF_controller.hpp
include/controller_plugin_differential_flatness/: DF_controller.hpp  DF_controller_plugin.hpp  DF_plugin.hpp
include/differential_flatness_based_controller/: DF_controller.hpp  DF_controller_plugin.hpp
launch/: differential_flattness_controller_launch.py
lib/: DF_controller.cpp  DF_plugin.cpp
src/: DF_controller.cpp  DF_controller_plugin.cpp  DF_plugin.cpp  main_nodes.cpp
tests/: test_performance_controller_benchmark.cpp
